fix(car-summary): fix payment alignment and hr style

--- a/src/app/car/components/advice/car-detail.component.scss
+++ b/src/app/car/components/advice/car-detail.component.scss
@@ -1,4 +1,6 @@
 
+@import '~styles/base';
+
 .car-detail-form {
   .car-form__coverages {
     margin-top: 30px;
@@ -7,5 +9,11 @@
   h4.knx-collapse-message__title {
     letter-spacing: 0.05em;
   }
+}
+
+hr {
+  margin: -8px 0 16px;
+  border: 0;
+  border-bottom: 2px $knab-primary-gray solid;
 }
 
