--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,12 +35,6 @@ h3 {
   width: 100%;
 }
 
-hr {
-  margin: -8px 0 16px;
-  border: 0;
-  border-bottom: 2px $knab-primary-gray solid;
-}
-
 p {
   font-size: $font-size-base;
 }
